--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -2785,44 +2785,48 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+end_src
 ** RSS Reader 
 #+begin_src emacs-lisp
-  (use-package elfeed)
+    (use-package elfeed)
 
-  (use-package elfeed-goodies
-    :after elfeed
-    :ensure t
-    :init
-    (elfeed-goodies/setup)
-    )
+    (use-package elfeed-goodies
+      :after elfeed
+      :ensure t
+      :init
+      (elfeed-goodies/setup)
+      )
 
-  (use-package elfeed-protocol
-    :after elfeed
-    :ensure t
-    :config
-    ;; curl recommend
-    (setq elfeed-use-curl t)
-    (elfeed-set-timeout 36000)
-    (setq elfeed-curl-extra-arguments '("--insecure")) ;necessary for https without a trust certificate
+    (use-package elfeed-protocol
+      :after elfeed
+      :ensure t
+      :config
+      ;; curl recommend
+      (setq elfeed-use-curl t)
+      (elfeed-set-timeout 36000)
+      (setq elfeed-curl-extra-arguments '("--insecure")) ;necessary for https without a trust certificate
 
-    ;; setup feeds
-    (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
-                                   :api-url "https://rss.sako.box/api/fever.php"
-                                   :use-authinfo t)))
+      ;; workaround for smth
+      (setq elfeed-protocol-fever-update-unread-only t)
 
-    ;; enable elfeed-protocol
-    (setq elfeed-protocol-enabled-protocols '(fever newsblur owncloud ttrss))
-    (elfeed-protocol-enable)
-    )
+      ;; setup feeds
+      (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
+                                     :api-url "https://rss.sako.box/api/fever.php"
+                                     :use-authinfo t)))
 
-  (let* ((proto-id "fever+https://sako@https://rss.sako.box")
-         (last-id (elfeed-protocol-fever-get-update-mark proto-id 'update)))
-    (elfeed-protocol-fever-set-update-mark  proto-id 'update (- last-id 1000)))
+      ;; enable elfeed-protocol
+      (setq elfeed-protocol-enabled-protocols '(fever newsblur owncloud ttrss))
+      (elfeed-protocol-enable)
+      )
 
-  (run-at-time 300 300
-             (lambda () (when (= elfeed-curl-queue-active 0)
-                          (elfeed-update))))
+    (let* ((proto-id "fever+https://sako@rss.sako.box")
+           (last-id (elfeed-protocol-fever-get-update-mark proto-id 'update)))
+      (elfeed-protocol-fever-set-update-mark  proto-id 'update (- last-id 1000)))
 
-  (add-hook 'elfeed-search-mode-hook 'elfeed-protocol-fever-reinit "fever+https://sako@https://rss.sako.box")
-#+end_src
+    (run-at-time 300 300
+               (lambda () (when (= elfeed-curl-queue-active 0)
+                            (elfeed-update))))
+
+    (add-hook 'emacs-startup-hook elfeed-update)
+
+  #+end_src
 * Org Mode Configuration Setup
 ** Babel Languages
 #+begin_src emacs-lisp
