--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -2791,46 +2791,46 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+end_src
 ** RSS Reader 
 #+begin_src emacs-lisp
-    (use-package elfeed)
+  (use-package elfeed)
 
-    (use-package elfeed-goodies
-      :after elfeed
-      :ensure t
-      :init
-      (elfeed-goodies/setup)
-      )
+  (use-package elfeed-goodies
+    :after elfeed
+    :ensure t
+    :init
+    (elfeed-goodies/setup)
+    )
 
-    (use-package elfeed-protocol
-      :after elfeed
-      :ensure t
-      :config
-      ;; curl recommend
-      (setq elfeed-use-curl t)
-      (elfeed-set-timeout 36000)
-      (setq elfeed-curl-extra-arguments '("--insecure")) ;necessary for https without a trust certificate
+  (use-package elfeed-protocol
+    :after elfeed
+    :ensure t
+    :config
+    ;; curl recommend
+    (setq elfeed-use-curl t)
+    (elfeed-set-timeout 36000)
+    (setq elfeed-curl-extra-arguments '("--insecure")) ;necessary for https without a trust certificate
 
-      ;; workaround for smth
-      (setq elfeed-protocol-fever-update-unread-only t)
+    ;; workaround for smth
+    (setq elfeed-protocol-fever-update-unread-only t)
 
-      ;; setup feeds
-      (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
-                                     :api-url "https://rss.sako.box/api/fever.php"
-                                     :use-authinfo t)))
+    ;; setup feeds
+    (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
+                                   :api-url "https://rss.sako.box/api/fever.php"
+                                   :use-authinfo t)))
 
-      ;; enable elfeed-protocol
-      (setq elfeed-protocol-enabled-protocols '(fever newsblur owncloud ttrss))
-      (elfeed-protocol-enable)
-      )
+    ;; enable elfeed-protocol
+    (setq elfeed-protocol-enabled-protocols '(fever newsblur owncloud ttrss))
+    (elfeed-protocol-enable)
+    )
 
-    (let* ((proto-id "fever+https://sako@rss.sako.box")
-           (last-id (elfeed-protocol-fever-get-update-mark proto-id 'update)))
-      (elfeed-protocol-fever-set-update-mark  proto-id 'update (- last-id 1000)))
+  (let* ((proto-id "fever+https://sako@rss.sako.box")
+         (last-id (elfeed-protocol-fever-get-update-mark proto-id 'update)))
+    (elfeed-protocol-fever-set-update-mark  proto-id 'update (- last-id 1000)))
 
-    (run-at-time 300 300
-               (lambda () (when (= elfeed-curl-queue-active 0)
-                            (elfeed-update))))
+  (run-at-time 300 300
+             (lambda () (when (= elfeed-curl-queue-active 0)
+                          (elfeed-update))))
 
-    (add-hook 'emacs-startup-hook elfeed-update)
+  (add-hook 'emacs-startup-hook (elfeed-update))
 
   #+end_src
 * Org Mode Configuration Setup
