--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -614,144 +614,147 @@ Cause emacs overlay lol
 #+end_src 
 ** Org-Mode
 #+begin_src emacs-lisp
-  (use-package org
-    :hook (org-mode . org-indent-mode)
-    :config
-    (setq org-ellipsis " ↓")
-    (setq org-agenda-start-with-log-mode t)
-    (setq org-log-done 'time)
-    (setq org-log-into-drawer t)
+    (use-package org
+      :hook (org-mode . org-indent-mode)
+      :config
+      (setq org-ellipsis " ↓")
+      (setq org-agenda-start-with-log-mode t)
+      (setq org-log-done 'time)
+      (setq org-log-into-drawer t)
 
-    ;; org habits thing
-    (require 'org-habit)
-    (add-to-list 'org-modules 'org-habit)
-    (setq org-habit-graph-column 60)
+      ;; org habits thing
+      (require 'org-habit)
+      (add-to-list 'org-modules 'org-habit)
+      (setq org-habit-graph-column 60)
 
-    ;; archive thingy i forgot
-    (setq org-refile-targets
-          '(("archive.org" :maxlevel . 1)))
+      ;; archive thingy i forgot
+      (setq org-refile-targets
+            '(("archive.org" :maxlevel . 1)))
 
-    ;; save org buffer before refile
-    (advice-add 'org-refile :after 'org-save-all-org-buffers)
+      ;; save org buffer before refile
+      (advice-add 'org-refile :after 'org-save-all-org-buffers)
 
-    ;; org agenda files
-    (setq org-agenda-files
-          '("~/org/tasks.org"
-            "~/org/school.org"
-            "~/org/daily.org"
-            "~/org/irl.org"
-            "~/org/work.org"))
+      ;; org agenda files
+      (setq org-agenda-files
+            '("~/org/tasks.org"
+              "~/org/school.org"
+              "~/org/daily.org"
+              "~/org/irl.org"
+              "~/org/work.org"))
 
-    ;; Following
-    (setq org-return-follows-link  t)
+      ;; Following
+      (setq org-return-follows-link  t)
 
-    ;; hide stars except for leader star
-    (setq org-hide-leading-stars t)
-    (setq org-hide-emphasis-markers nil)
+      ;; hide stars except for leader star
+      (setq org-hide-leading-stars t)
+      (setq org-hide-emphasis-markers nil)
 
-    ;; org mode src thing
-    (require 'org-tempo)
+      ;; make latex previews better
+      (setq org-format-latex-options (:foreground default :background default :scale 2.0 :html-foreground "Black" :html-background "Transparent" :html-scale 2.0 :matchers ("begin" "$1" "$" "$$" "\\(" "\\[")))  
 
-    (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
-    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-    (add-to-list 'org-structure-template-alist '("py" . "src python"))
+      ;; org mode src thing
+      (require 'org-tempo)
 
-    (setq org-todo-keywords
-          '((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!)")
-            (sequence "BACKLOG(b)" "PLAN(p)" "READY(r)" "ACTIVE(a)" "REVIEW(v)" "WAIT(w@/!)" "HOLD(h)" "|" "COMPLETED(c)" "CANCELED(k@)")))
+      (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
+      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+      (add-to-list 'org-structure-template-alist '("py" . "src python"))
 
-    (setq org-refile-targets
-          '(("archive.org" :maxlevel . 1)
-            ("tasks.org" :maxlevel . 1)))
+      (setq org-todo-keywords
+            '((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!)")
+              (sequence "BACKLOG(b)" "PLAN(p)" "READY(r)" "ACTIVE(a)" "REVIEW(v)" "WAIT(w@/!)" "HOLD(h)" "|" "COMPLETED(c)" "CANCELED(k@)")))
 
-    ;; Save Org buffers after refiling!
-    (advice-add 'org-refile :after 'org-save-all-org-buffers)
+      (setq org-refile-targets
+            '(("archive.org" :maxlevel . 1)
+              ("tasks.org" :maxlevel . 1)))
 
-    (setq org-startup-with-inline-images t)
+      ;; Save Org buffers after refiling!
+      (advice-add 'org-refile :after 'org-save-all-org-buffers)
 
-    (setq org-tag-alist
-          '((:startgroup)
-                                          ; Put mutually exclusive tags here
-            (:endgroup)
-            ("@errand" . ?E)
-            ("@home" . ?H)
-            ("@work" . ?W)
-            ("agenda" . ?a)
-            ("planning" . ?p)
-            ("publish" . ?P)
-            ("batch" . ?b)
-            ("note" . ?n)
-            ("idea" . ?i)))
+      (setq org-startup-with-inline-images t)
 
-    ;; Configure custom agenda views
-    (setq org-agenda-custom-commands
-          '(("d" "Dashboard"
-             ((agenda "" ((org-deadline-warning-days 7)))
-              (todo "NEXT"
-                    ((org-agenda-overriding-header "Next Tasks")))
-              (tags-todo "agenda/ACTIVE" ((org-agenda-overriding-header "Active Projects")))))
+      (setq org-tag-alist
+            '((:startgroup)
+                                            ; Put mutually exclusive tags here
+              (:endgroup)
+              ("@errand" . ?E)
+              ("@home" . ?H)
+              ("@work" . ?W)
+              ("agenda" . ?a)
+              ("planning" . ?p)
+              ("publish" . ?P)
+              ("batch" . ?b)
+              ("note" . ?n)
+              ("idea" . ?i)))
 
-            ("n" "Next Tasks"
-             ((todo "NEXT"
-                    ((org-agenda-overriding-header "Next Tasks")))))
+      ;; Configure custom agenda views
+      (setq org-agenda-custom-commands
+            '(("d" "Dashboard"
+               ((agenda "" ((org-deadline-warning-days 7)))
+                (todo "NEXT"
+                      ((org-agenda-overriding-header "Next Tasks")))
+                (tags-todo "agenda/ACTIVE" ((org-agenda-overriding-header "Active Projects")))))
 
-            ("W" "Work Tasks" tags-todo "+work-email")
+              ("n" "Next Tasks"
+               ((todo "NEXT"
+                      ((org-agenda-overriding-header "Next Tasks")))))
 
-            ;; Low-effort next actions
-            ("e" tags-todo "+TODO=\"NEXT\"+Effort<15&+Effort>0"
-             ((org-agenda-overriding-header "Low Effort Tasks")
-              (org-agenda-max-todos 20)
-              (org-agenda-files org-agenda-files)))
+              ("W" "Work Tasks" tags-todo "+work-email")
 
-            ("w" "Workflow Status"
-             ((todo "WAIT"
-                    ((org-agenda-overriding-header "Waiting on External")
-                     (org-agenda-files org-agenda-files)))
-              (todo "REVIEW"
-                    ((org-agenda-overriding-header "In Review")
-                     (org-agenda-files org-agenda-files)))
-              (todo "PLAN"
-                    ((org-agenda-overriding-header "In Planning")
-                     (org-agenda-todo-list-sublevels nil)
-                     (org-agenda-files org-agenda-files)))
-              (todo "BACKLOG"
-                    ((org-agenda-overriding-header "Project Backlog")
-                     (org-agenda-todo-list-sublevels nil)
-                     (org-agenda-files org-agenda-files)))
-              (todo "READY"
-                    ((org-agenda-overriding-header "Ready for Work")
-                     (org-agenda-files org-agenda-files)))
-              (todo "ACTIVE"
-                    ((org-agenda-overriding-header "Active Projects")
-                     (org-agenda-files org-agenda-files)))
-              (todo "COMPLETED"
-                    ((org-agenda-overriding-header "Completed Projects")
-                     (org-agenda-files org-agenda-files)))
-              (todo "CANC"
-                    ((org-agenda-overriding-header "Cancelled Projects")
-                     (org-agenda-files org-agenda-files)))))
+              ;; Low-effort next actions
+              ("e" tags-todo "+TODO=\"NEXT\"+Effort<15&+Effort>0"
+               ((org-agenda-overriding-header "Low Effort Tasks")
+                (org-agenda-max-todos 20)
+                (org-agenda-files org-agenda-files)))
 
-            ("1" "Events" agenda "display deadlines and exclude scheduled" (
-                                                                            (org-agenda-span 'month)
-                                                                            (org-agenda-time-grid nil)
-                                                                            (org-agenda-show-all-dates nil)
-                                                                            (org-agenda-entry-types '(:deadline)) ;; this entry excludes :scheduled
-                                                                            (org-deadline-warning-days 0) ))))
+              ("w" "Workflow Status"
+               ((todo "WAIT"
+                      ((org-agenda-overriding-header "Waiting on External")
+                       (org-agenda-files org-agenda-files)))
+                (todo "REVIEW"
+                      ((org-agenda-overriding-header "In Review")
+                       (org-agenda-files org-agenda-files)))
+                (todo "PLAN"
+                      ((org-agenda-overriding-header "In Planning")
+                       (org-agenda-todo-list-sublevels nil)
+                       (org-agenda-files org-agenda-files)))
+                (todo "BACKLOG"
+                      ((org-agenda-overriding-header "Project Backlog")
+                       (org-agenda-todo-list-sublevels nil)
+                       (org-agenda-files org-agenda-files)))
+                (todo "READY"
+                      ((org-agenda-overriding-header "Ready for Work")
+                       (org-agenda-files org-agenda-files)))
+                (todo "ACTIVE"
+                      ((org-agenda-overriding-header "Active Projects")
+                       (org-agenda-files org-agenda-files)))
+                (todo "COMPLETED"
+                      ((org-agenda-overriding-header "Completed Projects")
+                       (org-agenda-files org-agenda-files)))
+                (todo "CANC"
+                      ((org-agenda-overriding-header "Cancelled Projects")
+                       (org-agenda-files org-agenda-files)))))
 
-    ;; TODO Setup template for school
+              ("1" "Events" agenda "display deadlines and exclude scheduled" (
+                                                                              (org-agenda-span 'month)
+                                                                              (org-agenda-time-grid nil)
+                                                                              (org-agenda-show-all-dates nil)
+                                                                              (org-agenda-entry-types '(:deadline)) ;; this entry excludes :scheduled
+                                                                              (org-deadline-warning-days 0) ))))
 
-    (setq org-capture-templates
-          `(("t" "Tasks / Projects")
-            ("tt" "Task" entry (file+olp "~/org/tasks.org" "captured")
-             "* TODO %?\n  %U\n  %a\n  %i" :empty-lines 1)
+      ;; TODO Setup template for school
 
-            ("j" "Journal Entries")
-            ("jj" "Journal" entry
-             (file+olp+datetree "~/org/journal.org")
-             "\n* %<%I:%M %p> - Journal :journal:\n\n%?\n\n"
-             ;; ,(dw/read-file-as-string "~/Notes/Templates/Daily.org")
-             :clock-in :clock-resume
-             :empty-lines 1))))
+      (setq org-capture-templates
+            `(("t" "Tasks / Projects")
+              ("tt" "Task" entry (file+olp "~/org/tasks.org" "captured")
+               "* TODO %?\n  %U\n  %a\n  %i" :empty-lines 1)
+
+              ("j" "Journal Entries")
+              ("jj" "Journal" entry
+               (file+olp+datetree "~/org/journal.org")
+               "\n* %<%I:%M %p> - Journal :journal:\n\n%?\n\n"
+               ;; ,(dw/read-file-as-string "~/Notes/Templates/Daily.org")
+               :clock-in :clock-resume
+               :empty-lines 1))))
 #+end_src
 ** Org Mode Beautifers 
 *** Olivetti
